[gd_scene load_steps=33 format=3 uid="uid://v4cyox7q5hs7"]

[ext_resource type="Script" path="res://battle_screen/little_creature.gd" id="1_bckxk"]
[ext_resource type="Texture2D" uid="uid://dd7tar31kdtmv" path="res://battle_screen/furble.png" id="2_w2s3r"]
[ext_resource type="AudioStream" uid="uid://bgx7rcl6irkaq" path="res://battle_screen/little_creature/Furble Landing 1.wav" id="3_aoetr"]
[ext_resource type="AudioStream" uid="uid://bgidoocrm2ft1" path="res://battle_screen/little_creature/Furble Landing 2.wav" id="3_fciqt"]
[ext_resource type="AudioStream" uid="uid://cqlykp6nlrcgi" path="res://battle_screen/little_creature/Furble Landing 3.wav" id="4_oyb3g"]
[ext_resource type="AudioStream" uid="uid://c1e6cdmcw1yh1" path="res://battle_screen/little_creature/Furble Landing 4.wav" id="5_bvatr"]
[ext_resource type="AudioStream" uid="uid://b8nskb2r22kw7" path="res://battle_screen/little_creature/Furble Jump 1.wav" id="7_g0k4o"]
[ext_resource type="AudioStream" uid="uid://dtq772mxuspox" path="res://battle_screen/little_creature/Furble Jump 2.wav" id="8_dukfk"]
[ext_resource type="AudioStream" uid="uid://bxk3v40akpqkv" path="res://battle_screen/little_creature/Furble Jump 3.wav" id="9_em31v"]
[ext_resource type="AudioStream" uid="uid://cfb5hmcvhc074" path="res://battle_screen/little_creature/Furble Jump 4.wav" id="10_br6qj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2pafy"]
atlas = ExtResource("2_w2s3r")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv3i4"]
atlas = ExtResource("2_w2s3r")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtmng"]
atlas = ExtResource("2_w2s3r")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1plie"]
atlas = ExtResource("2_w2s3r")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_njcnu"]
atlas = ExtResource("2_w2s3r")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyf2d"]
atlas = ExtResource("2_w2s3r")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kebx"]
atlas = ExtResource("2_w2s3r")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtthc"]
atlas = ExtResource("2_w2s3r")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bx61"]
atlas = ExtResource("2_w2s3r")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_naql4"]
atlas = ExtResource("2_w2s3r")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4e5f"]
atlas = ExtResource("2_w2s3r")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_78evc"]
atlas = ExtResource("2_w2s3r")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fq7m"]
atlas = ExtResource("2_w2s3r")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu5i0"]
atlas = ExtResource("2_w2s3r")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_85uka"]
atlas = ExtResource("2_w2s3r")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yst83"]
atlas = ExtResource("2_w2s3r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbnlc"]
atlas = ExtResource("2_w2s3r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ehn78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pafy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv3i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtmng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1plie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njcnu")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyf2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kebx")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtthc")
}],
"loop": true,
"name": &"falling",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bx61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naql4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4e5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78evc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fq7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu5i0")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85uka")
}],
"loop": true,
"name": &"squish",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yst83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbnlc")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qp8e0"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3yi8k"]
radius = 12.0
height = 24.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kxu6a"]
random_pitch = 1.5
random_volume_offset_db = 5.0
streams_count = 4
stream_0/stream = ExtResource("3_aoetr")
stream_1/stream = ExtResource("3_fciqt")
stream_2/stream = ExtResource("4_oyb3g")
stream_3/stream = ExtResource("5_bvatr")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6bdkj"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("7_g0k4o")
stream_1/stream = ExtResource("8_dukfk")
stream_2/stream = ExtResource("9_em31v")
stream_3/stream = ExtResource("10_br6qj")

[node name="LittleCreature" type="RigidBody2D" groups=["furble"]]
collision_layer = 4
collision_mask = 53
gravity_scale = 0.7
contact_monitor = true
max_contacts_reported = 6
linear_damp = 3.0
angular_damp = 20.0
script = ExtResource("1_bckxk")
torque_gain_proportional = 6500.0
jump_impulse = Vector2(250, -500)
jump_probability = 0.005

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ehn78")
animation = &"falling"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_qp8e0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_3yi8k")

[node name="MovementSounds" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_kxu6a")
volume_db = -10.0
pitch_scale = 2.0

[node name="JumpSounds" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_6bdkj")
volume_db = 10.0
pitch_scale = 4.0

[connection signal="animation_looped" from="Sprite" to="." method="_on_sprite_animation_looped"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_obstacle_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_obstacle_exited"]
